--- a/i-love-alpine.html
+++ b/i-love-alpine.html
@@ -3,10 +3,49 @@
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 </head>
 <body>
-    <h1 x-data="{ message: 'I ❤️ Alpine' }" x-text="message"></h1>
-    <div x-data="{ count: 0 }">
-        <button @click="count++">Increment</button>
-        <span x-text="count"></span>
-    </div>
+    <section>
+        <h1 x-data="{ message: 'I ❤️ Alpine' }" x-text="message"></h1>
+        <div x-data="{ count: 0 }">
+            <button @click="count++">Increment</button>
+            <span x-text="count"></span>
+        </div>
+    </section>
+    <br>
+    <section>
+        <h1>
+            Show and hide element
+        </h1>
+        <div x-data="{ open: false }">
+            <button @click="open = ! open">Toggle</button>
+         
+            <div x-show="open" @click.outside="open = false">Contents...</div>
+        </div>
+    </section>    
+    <section>
+        <h1>
+            Search input
+        </h1>
+        <div
+    x-data="{
+        search: '',
+ 
+        items: ['foo', 'bar', 'baz'],
+ 
+        get filteredItems() {
+            return this.items.filter(
+                i => i.startsWith(this.search)
+            )
+        }
+    }"
+>
+    <input x-model="search" placeholder="Search...">
+ 
+    <ul>
+        <template x-for="item in filteredItems" :key="item">
+            <li x-text="item"></li>
+        </template>
+    </ul>
+</div>
+    </section>    
 </body>
 </html>
